feat: Complete Phase 1 backend implementation with Stripe integration
- Add complete Stripe subscription system with webhooks and tier management
- Implement Prisma ORM with PostgreSQL database schema
- Add JWT authentication with Supabase Auth integration
- Create comprehensive API endpoints (15+) for domain generation and subscriptions
- Add OpenAI GPT-4o-mini and LLaMA-3 AI integration with tier-based model selection
- Implement multi-registrar domain availability checking with caching
- Add comprehensive testing suite and security fixes
- Update .gitignore and organize documentation in docs/ folder

--- a/backend/env.example
+++ b/backend/env.example
@@ -1,7 +1,7 @@
 # Database Configuration
+DATABASE_URL=postgresql://user:password@localhost:5432/nmc?schema=public
 SUPABASE_URL=https://your-project.supabase.co
 SUPABASE_ANON_KEY=your-supabase-anon-key
-SUPABASE_SERVICE_ROLE_KEY=your-supabase-service-role-key
 
 # AI Services Configuration
 OPENAI_API_KEY=sk-...
@@ -14,10 +14,16 @@ RAPIDAPI_KEY=your-rapidapi-key  # Alternative for Domainr via RapidAPI
 # Application Configuration
 NODE_ENV=development
 PORT=3000
-CORS_ORIGIN=http://localhost:3000
+CORS_ORIGIN=http://localhost:3001
 
 # Usage Limits (per month)
 FREE_TIER_LIMIT=2
 MID_TIER_LIMIT=100
 # PREMIUM_TIER_LIMIT can be a number or 'unlimited'
 PREMIUM_TIER_LIMIT=unlimited
+
+# Stripe Configuration
+STRIPE_SECRET_KEY=sk_test_...
+STRIPE_PRICE_MID=price_...
+STRIPE_PRICE_PREMIUM=price_...
+STRIPE_WEBHOOK_SECRET=whsec_...
