--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,8 @@ yarn-error.log*
 # Build output
 dist/
 build/
+.next/
+out/
 
 # Logs
 logs
@@ -64,3 +66,35 @@ jspm_packages/
 .Trashes
 ehthumbs.db
 Thumbs.db
+
+# Package manager files
+package-lock.json
+pnpm-lock.yaml
+yarn.lock
+
+# TypeScript build output
+*.tsbuildinfo
+
+# Prisma
+prisma/migrations/
+
+# Database
+*.db
+*.sqlite
+
+# Temporary files
+tmp/
+temp/
+
+# Cursor IDE
+.cursor/
+
+# Test coverage
+coverage/
+.nyc_output/
+
+# Local development
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
