--- a/backend/package.json
+++ b/backend/package.json
@@ -7,10 +7,17 @@
     "build": "tsc",
     "start": "node dist/index.js",
     "dev": "nodemon src/index.ts",
+    "prisma:generate": "prisma generate",
+    "prisma:migrate:dev": "prisma migrate dev",
+    "prisma:deploy": "prisma migrate deploy",
     "test": "echo \"Error: no test specified\" && exit 1",
     "test:integration": "ts-node test/day2-integration-test.ts",
     "test:history": "ts-node test/user-history-endpoint-test.ts",
-    "test:validators": "ts-node test/validator-smoke-test.ts"
+    "test:validators": "ts-node test/validator-smoke-test.ts",
+    "test:subscriptions": "ts-node test/subscription-smoke-test.ts",
+    "test:subscriptions:webhook": "ts-node test/subscription-webhook-smoke-test.ts",
+    "test:subscriptions:integration": "ts-node test/subscription-integration-test.ts",
+    "test:database": "ts-node test/database-service-test.ts"
   },
   "keywords": [
     "ai",
@@ -22,12 +29,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^5.16.1",
     "@supabase/supabase-js": "^2.38.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "groq-sdk": "^0.3.1",
     "openai": "^4.20.1",
+    "stripe": "^18.4.0",
     "uuid": "^9.0.1",
     "zod": "^3.25.76"
   },
@@ -38,6 +47,7 @@
     "@types/supertest": "^6.0.3",
     "@types/uuid": "^9.0.5",
     "nodemon": "^3.0.1",
+    "prisma": "^5.22.0",
     "supertest": "^7.1.4",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.0"
